css/main.css
@import url('https://fonts.googleapis.com/css?family=Montserrat');
/* ===========================
Text - General
============================ */
h1 {
  text-shadow: 3px 3px 4px rgba(0,0,0,0.63);
  font-weight: 300;
  font-family: 'Montserrat', sans-serif;
}
h2 {
  text-decoration: underline;
  font-family: 'Montserrat', sans-serif;
}
body {
  font-family: 'Montserrat', sans-serif;
  background: linear-gradient(35deg, #646E77, #9FACB8);
}
.NavButton {
  font-size: 1.5rem;
}
ol,ul {
  font-size: 1rem;
}
li,p {
  line-height: 1.5;
}
.Description {
  font-size: 1rem;
  margin: auto;
  margin-top: 4%;
  margin-bottom: 5%;
}
.Names {
  margin-top: 1%;
  margin-left: 10%;
}
/* ===========================
Text - Header and Nav Bar
============================ */
header {
  background: linear-gradient(35deg, #797E83, #BCC7D1);
  color: hsl(0, 0%, 86%);
  box-shadow: 4px 8px 7px #888888;
  font-family: 'Montserrat', sans-serif;
}
nav {
  background-color: hsl(0, 0%, 50%);
}
#headerName {
  text-indent: 10px;
  padding-top: 10px;
}
nav ul {
  margin: 0px;
  padding: 5px 0px 5px 30px;
}
nav li {
  display: inline;
  margin-right: 20px;
}
li.NavButton:hover {
  animation-name: HighNav;
  animation-duration: 500ms;
  animation-fill-mode:forwards;
}
@keyframes HighNav {
  100% {
    color: #B31B1B;
  }
}
/* ===========================
Text - Footer
============================ */
.text-center {
  text-align: center;
}
.copy-left {
    display: inline-block;
    margin: 0px;
    filter: FlipH;
    -ms-filter: “FlipH”;
    -moz-transform: scale(-1, 1);
    -webkit-transform: scale(-1, 1);
    -o-transform: scale(-1, 1);
    -ms-transform: scale(-1, 1);
    transform: scale(-1, 1);
}

/* ===========================
Links, Pictures, and Media
============================ */
a {
  text-decoration: none;
  color: inherit;
}
a.google:hover {
  animation-name: HighGoogle;
  animation-duration: 500ms;
  animation-fill-mode:forwards;
}
@keyframes HighGoogle {
  100% {
    color: #4885ED;
  }
}
a.orcid:hover {
  animation-name: HighOrcid;
  animation-duration: 500ms;
  animation-fill-mode:forwards;
}
@keyframes HighOrcid {
  100% {
    color: #A6CE39;
  }
}
a.resgate:hover {
  animation-name: HighResG;
  animation-duration: 500ms;
  animation-fill-mode:forwards;
}
@keyframes HighResG {
  100% {
    color: #00CCBB;
  }
}
a.cornell {
    color:#B31B1B;
}
a.cornell:hover {
    color:#FFF;
}
.MediaList {
  margin: 5%, 5%, 5%, 5%;
  font-size: 1em;
}
.Media {
  color: hsl(233, 72%, 37%);
}
.Media:hover {
  color: hsl(50, 72%, 49%);
}
.Media:active {
  color: Black;
}
.ProfileImage {
  position: static;
  margin: auto;
  margin-left: 5%;
  margin-right: 2%;
  width: 225px;
  height: 225px;
  border-color: black;
  border-width: 4px;
  border-style: solid;
  border-radius: 50%;
  float: left;
}
.Links {
  position: static;
  margin: auto;
  margin-left: 4%;
}
.PermLinks {
  position: static;
  margin: auto;
  margin-left: 3%;
  margin-right: 3%;
}
/* ===================================
Tables
==================================== */
.pub-content {
    background:transparent;
    position:relative;
    margin-left:5%;
    padding:0px 60px 0px 0px;
}
.pub-content h3 {
    margin-bottom: 10px;
}
.table-borderless > tbody > tr > td,
.table-borderless > tbody > tr > th,
.table-borderless > tfoot > tr > td,
.table-borderless > tfoot > tr > th,
.table-borderless > thead > tr > td,
.table-borderless > thead > tr > th {
    border: none;
}
.table > tbody > tr > td {
    vertical-align: middle;
}

